// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`runPerformanceTest 1`] = `
Object {
  "benchmark": undefined,
  "jankinessResult": null,
  "result": Object {
    "value": Object {
      "metrics": Object {
        "load": 321,
        "pageWeight": 1000,
        "speedIndex": 10,
      },
    },
  },
  "sessionId": "foobarSession",
  "userAgent": undefined,
}
`;

exports[`runPerformanceTest 2`] = `
Array [
  Array [
    Object {
      "capabilities": Object {
        "browserName": "chrome",
        "browserVersion": 123,
        "goog:chromeOptions": Object {
          "w3c": true,
        },
        "platformName": "Playstation",
        "sauce:options": Object {
          "build": "buildname",
          "capturePerformance": true,
          "crmuxdriverVersion": "stable",
          "extendedDebugging": true,
          "name": "testname",
          "seleniumVersion": "3.141.59",
          "tunnelIdentifier": "foobar",
        },
      },
      "connectionRetryCount": 1,
      "connectionRetryTimeout": 180000,
      "headers": Object {
        "User-Agent": "webdriver/5.13.1 (Speedo/1.1.1)",
      },
      "key": "mykey",
      "logLevel": "trace",
      "outputDir": "/some/dir",
      "region": "eu",
      "user": "myuser",
    },
  ],
]
`;

exports[`runPerformanceTest w/ mobile emulation 1`] = `
Array [
  Array [
    "sauce:debug",
    Object {
      "method": "Emulation.setUserAgentOverride",
      "params": Object {
        "userAgent": "Mozilla/5.0 (Linux; Android 7.1.1; Nexus 6 Build/N6F26U) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/75.0.3765.0 Mobile Safari/537.36",
      },
    },
  ],
  Array [
    "sauce:debug",
    Object {
      "method": "Emulation.setDeviceMetricsOverride",
      "params": Object {
        "deviceScaleFactor": 3.5,
        "height": 732,
        "mobile": true,
        "width": 412,
      },
    },
  ],
]
`;

exports[`runPerformanceTest w/ parentTunnel 1`] = `
Object {
  "benchmark": undefined,
  "jankinessResult": null,
  "result": Object {
    "value": Object {
      "metrics": Object {
        "load": 321,
        "pageWeight": 1000,
        "speedIndex": 10,
      },
    },
  },
  "sessionId": "foobarSession",
  "userAgent": undefined,
}
`;

exports[`runPerformanceTest w/ parentTunnel 2`] = `
Array [
  Array [
    Object {
      "capabilities": Object {
        "browserName": "chrome",
        "browserVersion": 123,
        "goog:chromeOptions": Object {
          "w3c": true,
        },
        "platformName": "Playstation",
        "sauce:options": Object {
          "build": "buildname",
          "capturePerformance": true,
          "crmuxdriverVersion": "foobar",
          "extendedDebugging": true,
          "name": "testname",
          "parentTunnel": "foobaz",
          "seleniumVersion": "3.141.59",
          "tunnelIdentifier": "foobar",
        },
      },
      "connectionRetryCount": 1,
      "connectionRetryTimeout": 180000,
      "headers": Object {
        "User-Agent": "webdriver/5.13.1 (Speedo/1.1.1)",
      },
      "key": "mykey",
      "logLevel": "trace",
      "outputDir": "/some/dir",
      "region": "eu",
      "user": "myuser",
    },
  ],
]
`;

exports[`runPerformanceTest without args 1`] = `
Object {
  "benchmark": undefined,
  "jankinessResult": null,
  "result": Object {
    "value": Object {
      "metrics": Object {
        "load": 321,
        "pageWeight": 1000,
        "speedIndex": 10,
      },
    },
  },
  "sessionId": "foobarSession",
  "userAgent": undefined,
}
`;

exports[`runPerformanceTest without args 2`] = `
Array [
  Array [
    Object {
      "capabilities": Object {
        "browserName": "chrome",
        "browserVersion": undefined,
        "goog:chromeOptions": Object {
          "w3c": true,
        },
        "platformName": undefined,
        "sauce:options": Object {
          "build": "buildname",
          "capturePerformance": true,
          "crmuxdriverVersion": undefined,
          "extendedDebugging": true,
          "name": "testname",
          "seleniumVersion": "3.141.59",
        },
      },
      "connectionRetryCount": 1,
      "connectionRetryTimeout": 180000,
      "headers": Object {
        "User-Agent": "webdriver/5.13.1 (Speedo/1.1.1)",
      },
      "key": "mykey",
      "logLevel": "trace",
      "outputDir": "/some/dir",
      "region": undefined,
      "user": "myuser",
    },
  ],
]
`;
